# DraftCoach

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  patch-26.5-diff.json  patch-26.5.md  riot.txt  start-all.bat  start-all.js  start-all.ps1  start-all.sh  test-ai-quality.js  test-client.js  test-compare.js  test-darius-jungle.js  test-dual.js  test-intelligence-upgrades.js  test-overlay-stress.js  test-quality.js  test-riot-api.ts  test-runes.js  test-search.ts  test-stats.js  test-stream.ts
.agents/workflows/: build-installer.md
apps/backend/: package-lock.json  package.json  tsconfig.json
apps/billing/: package.json
apps/desktop/: dark_build.txt  (+25 more)
apps/desktop-tauri/: index.html  package.json  tsconfig.json
apps/desktop-tauri/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/installer/: Cargo.toml  build.rs  icon.rc
apps/installer/src/: main.rs
apps/installer/ui/: index.html  installer.js  styles.css
docs/: future-centralized-rag.md
nsis/: gen-bmp-assets.py  template.nsi
scripts/: ai-build-regression.cjs  auto-sync-patch.cjs  build-installer.ps1  run-sync.sh  sync-meta-builds.cjs  sync-mobalytics-modes.cjs  sync-mobalytics.cjs  sync-ugg.cjs
shared/: engine-types.ts  investigate-items.ts  jest.config.js  run-tests.ts  tsconfig.json  types.ts
tools/: gen-installer-images.py  gen-squirrel-assets.py  generate-champions.js  generate-items.js
(+435 files in other folders)
