[package]
name = "draftcoach-installer"
version = "1.1.0"
edition = "2021"
description = "DraftCoach Premium Web-Based Installer"
authors = ["Ayoub"]

[[bin]]
name = "DraftCoach_Setup"
path = "src/main.rs"

[dependencies]
wry = "0.50"
tao = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "winnt"] }

[build-dependencies]
embed-resource = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
