[package]
name = "draftcoach"
version = "1.1.0"
description = "DraftCoach - AI-powered League of Legends companion"
authors = ["Ayoub"]
edition = "2021"

[lib]
name = "draftcoach_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync", "net"] }
tauri-plugin-dialog = "2.7.0"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
